--- a/terraform/helm/miner-chart/templates/zenotta-miner/services.yml
+++ b/terraform/helm/miner-chart/templates/zenotta-miner/services.yml
@@ -9,7 +9,7 @@ metadata:
 spec:
   selector:
     {{- include "miner.selectorLabels" . | nindent 4 }}
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - protocol: TCP
       port: 80
