--- a/.github/workflows/build-miner.yml
+++ b/.github/workflows/build-miner.yml
@@ -27,6 +27,9 @@ jobs:
           images: |
             ghcr.io/${{ github.repository }}
       
+      - name: Setup Buildx so we can cache
+        uses: docker/setup-buildx-action@v1
+
       - name: Build and push Docker images
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
