try cache in github and deploy miner chart

--- a/terraform/helm/miner-chart/values.yml
+++ b/terraform/helm/miner-chart/values.yml
@@ -2,6 +2,7 @@ service_account: "zenotta-node-service-account"
 dockercfg: ""
 
 miner:
+  replicaCount: 1
   image:
     repository: ghcr.io/barryboot/zenotta-cloud-mining
     tag: main
