--- a/terraform/helm/miner-chart/templates/zenotta-miner/deployment.yml
+++ b/terraform/helm/miner-chart/templates/zenotta-miner/deployment.yml
@@ -7,7 +7,7 @@ metadata:
   labels:
     {{- include "miner.labels" . | nindent 4 }}
 spec:
-  replicas: {{ $.Values.miner.replicaCount }}
+  replicas: {{ (.Values.miner).replicaCount }}
   selector:
     matchLabels:
       {{- include "miner.selectorLabels" . | nindent 6 }}
