--- a/terraform/helm/miner-chart/templates/zenotta-miner/deployment.yml
+++ b/terraform/helm/miner-chart/templates/zenotta-miner/deployment.yml
@@ -24,14 +24,14 @@ spec:
       serviceAccountName: "{{ .Values.service_account }}"
       containers:
         - name: {{ include "miner.fullname" . }}
-          image: "{{ .Values.miner.image.repository }}:{{ .Values.miner.image.tag }}"
+          image: "{{ ().Values.miner).image.repository }}:{{ ().Values.miner).image.tag }}"
           resources:
             limits:
-              memory: {{ .Values.miner.limits.memory }}
-              cpu: {{ .Values.miner.limits.cpu }}
+              memory: {{ ().Values.miner).limits.memory }}
+              cpu: {{ ().Values.miner).limits.cpu }}
             requests:
-              memory: {{ .Values.miner.requests.memory }}
-              cpu: {{ .Values.miner.requests.cpu }}
+              memory: {{ ().Values.miner).requests.memory }}
+              cpu: {{ ().Values.miner).requests.cpu }}
           ports:
             - containerPort: 80
           imagePullPolicy: Always
