try cache in github and deploy miner chart

--- a/terraform/helm/miner-chart/templates/zenotta-miner/configmap.yml
+++ b/terraform/helm/miner-chart/templates/zenotta-miner/configmap.yml
@@ -4,4 +4,4 @@ kind: ConfigMap
 metadata:
   name: {{ include "miner.fullname" . }}-configmap
 data:
-  RUST_LOG: {{ .Values.miner.configMap.RUST_LOG | quote }}
+  RUST_LOG: {{ (.Values.miner).configMap.RUST_LOG | quote }}
