--- a/terraform/helm/miner-chart/templates/zenotta-miner/secrets.yaml
+++ b/terraform/helm/miner-chart/templates/zenotta-miner/secrets.yaml
@@ -7,4 +7,4 @@ metadata:
   name: {{ include "miner.fullname" . }}-secret
 type: Opaque
 data:
-  PLACEHOLDER: "skibidi-yes"
+  PLACEHOLDER: c2tpYmlkaS15ZXM=
