--- a/terraform/helm/miner-chart/templates/zenotta-miner/deployment.yaml
+++ b/terraform/helm/miner-chart/templates/zenotta-miner/deployment.yaml
@@ -25,6 +25,16 @@ spec:
       containers:
         - name: {{ include "miner.fullname" . }}
           image: "{{ (.Values.miner).image.repository }}:{{ (.Values.miner).image.tag }}"
+          command: 
+            - "node"
+            - "miner"
+            - "--config=/etc/node_settings.toml"
+            - "--tls_config=/etc/tls_certificates.json"
+            - "--initial_block_config=/etc/initial_block.json"
+            - "--api_config=/etc/api_config.json"
+            - "--api_use_tls=0"
+            - "--with_user_index=0"
+            - "--address={{ (.Values.miner).address }}:{{ (.Values.miner).port }}"
           resources:
             limits:
               memory: {{ (.Values.miner).limits.memory }}
