--- a/terraform/helm/miner-chart/values.yaml
+++ b/terraform/helm/miner-chart/values.yaml
@@ -3,6 +3,8 @@ fullnameOverride: ""
 
 miner:
   replicaCount: 1
+  address: "127.0.0.1"
+  port: 12340
   image:
     repository: ghcr.io/barryboot/zenotta-cloud-mining
     tag: main
