set rust log to debug

--- a/terraform/helm/miner-chart/templates/zenotta-miner/deployment.yaml
+++ b/terraform/helm/miner-chart/templates/zenotta-miner/deployment.yaml
@@ -26,6 +26,7 @@ spec:
         - name: {{ include "miner.fullname" . }}
           image: "{{ (.Values.miner).image.repository }}:{{ (.Values.miner).image.tag }}"
           command: 
+            - "RUST_LOG=info,debug"
             - "node"
             - "miner"
             - "--config=/etc/node_settings.toml"
