Use values without the brackets

--- a/terraform/helm/miner-chart/templates/zenotta-miner/deployment.yaml
+++ b/terraform/helm/miner-chart/templates/zenotta-miner/deployment.yaml
@@ -24,7 +24,7 @@ spec:
       serviceAccountName: "{{ .Values.service_account }}"
       containers:
         - name: {{ include "miner.fullname" . }}
-          image: "{{ (.Values.miner).image.repository }}:{{ (.Values.miner).image.tag }}"
+          image: "{{ .Values.miner.image.repository }}:{{ .Values.miner.image.tag }}"
           command: 
             - "/zenotta/target/release/node"
             - "miner"
