--- a/terraform/helm/miner-chart/templates/zenotta-miner/deployment.yaml
+++ b/terraform/helm/miner-chart/templates/zenotta-miner/deployment.yaml
@@ -24,7 +24,7 @@ spec:
       serviceAccountName: "{{ .Values.service_account }}"
       containers:
         - name: {{ include "miner.fullname" . }}
-          image: "{{ .Values.miner.image.repository }}:{{ .Values.miner.image.tag }}"
+          image: "{{ (.Values.miner).image.repository }}:{{ .Values.miner.image.tag }}"
           command: 
             - "/zenotta/target/release/node"
             - "miner"
@@ -37,8 +37,8 @@ spec:
             - "--address={{ (.Values.miner).address }}:{{ (.Values.miner).port }}"
           resources:
             limits:
-              memory: {{ .Values.miner.limits.memory }}
-              cpu: {{ .Values.miner.limits.cpu }}
+              memory: {{ (.Values.miner).limits.memory }}
+              cpu: {{ (.Values.miner).limits.cpu }}
               nvidia.com/gpu: 1
             requests:
               memory: {{ (.Values.miner).requests.memory }}
