--- a/helm/node-chart/templates/storageClass.yaml
+++ b/helm/node-chart/templates/storageClass.yaml
@@ -5,4 +5,4 @@ metadata:
 provisioner: kubernetes.io/gce-pd
 reclaimPolicy: Retain
 allowVolumeExpansion: true
-volumeBindingMode: Immediate
+volumeBindingMode: WaitForFirstConsumer
