manage persistent disks properly

--- a/helm/miner-chart/templates/zenotta-miner/persistentVolumeClaim.yaml
+++ b/helm/miner-chart/templates/zenotta-miner/persistentVolumeClaim.yaml
@@ -3,6 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name:  {{ include "miner.fullname" . }}-pvc
 spec:
+  volumeName:  {{ include "miner.fullname" . }}-pv
   accessModes:
     - ReadWriteOnce
   volumeMode: Filesystem
