--- a/helm/miner-chart/values.yaml
+++ b/helm/miner-chart/values.yaml
@@ -11,6 +11,7 @@ miner:
   period: "5-month"
   api_key: "API_KEY"
   node_name: "nodeName"
+  disk_name: "diskName"
   image:
     repository: ghcr.io/barryboot/zenotta-cloud-mining
     tag: main
