--- a/helm/miner-chart/templates/zenotta-miner/persistentVolume.yaml
+++ b/helm/miner-chart/templates/zenotta-miner/persistentVolume.yaml
@@ -1,16 +1,16 @@
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: {{ include "miner.fullname" . }}-pv
-spec:
-  storageClassName: zenotta-wallet
-  capacity:
-    storage: 3Gi
-  accessModes:
-    - ReadWriteOnce
-  claimRef:
-    namespace: default
-    name: {{ include "miner.fullname" . }}-pvc
-  csi:
-    driver: pd.csi.storage.gke.io
-    volumeHandle: {{ (.Values.miner).disk_name }}
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: {{ include "miner.fullname" . }}-pv
+# spec:
+#   storageClassName: zenotta-wallet
+#   capacity:
+#     storage: 3Gi
+#   accessModes:
+#     - ReadWriteOnce
+#   claimRef:
+#     namespace: default
+#     name: {{ include "miner.fullname" . }}-pvc
+#   csi:
+#     driver: pd.csi.storage.gke.io
+#     volumeHandle: {{ (.Values.miner).disk_name }}
