--- a/helm/miner-chart/templates/zenotta-miner/persistentVolumeClaim.yaml
+++ b/helm/miner-chart/templates/zenotta-miner/persistentVolumeClaim.yaml
@@ -1,13 +1,13 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name:  {{ include "miner.fullname" . }}-pvc
-spec:
-  volumeName:  {{ include "miner.fullname" . }}-pv
-  accessModes:
-    - ReadWriteOnce
-  volumeMode: Filesystem
-  resources:
-    requests:
-      storage: 3Gi
-  storageClassName: zenotta-wallet
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name:  {{ include "miner.fullname" . }}-pvc
+# spec:
+#   volumeName:  {{ include "miner.fullname" . }}-pv
+#   accessModes:
+#     - ReadWriteOnce
+#   volumeMode: Filesystem
+#   resources:
+#     requests:
+#       storage: 3Gi
+#   storageClassName: zenotta-wallet
