--- a/helm/miner-chart/templates/zenotta-miner/services.yaml
+++ b/helm/miner-chart/templates/zenotta-miner/services.yaml
@@ -9,8 +9,9 @@ metadata:
 spec:
   selector:
     {{- include "miner.selectorLabels" . | nindent 4 }}
-  type: ClusterIP
+  type: None
   ports:
     - protocol: TCP
       port: 80
       targetPort: 3000
+      name: http-api
