miner pod labels

--- a/helm/miner-chart/templates/zenotta-miner/configmap.yaml
+++ b/helm/miner-chart/templates/zenotta-miner/configmap.yaml
@@ -5,3 +5,5 @@ metadata:
   name: {{ include "miner.fullname" . }}-configmap
 data:
   RUST_LOG: {{ (.Values.miner).configMap.RUST_LOG | quote }}
+  OWNER: {{ .Values.miner.owner }}
+  PERIOD: {{ .Values.miner.period }}
