--- a/helm/miner-chart/templates/zenotta-miner/secrets.yaml
+++ b/helm/miner-chart/templates/zenotta-miner/secrets.yaml
@@ -7,5 +7,4 @@ metadata:
   name: {{ include "miner.fullname" . }}-secret
 type: Opaque
 data:
-  PLACEHOLDER: c2tpYmlkaS15ZXM=
-  MINING_KEY: c2tpYmlkaS15ZXM=
+  MINING_API_KEY: {{ .Values.miner.api_key | b64enc }}
