less resources and settings conf for local dev

--- a/helm/miner-chart/templates/zenotta-miner/statefulset.yaml
+++ b/helm/miner-chart/templates/zenotta-miner/statefulset.yaml
@@ -22,7 +22,7 @@ spec:
         command: 
             - "/zenotta/target/release/node"
             - "miner"
-            - "--config=/etc/node_settings.toml"
+            - "--config={{ (.Values.miner).config }}"
             - "--tls_config=/etc/tls_certificates.json"
             - "--initial_block_config=/etc/initial_block.json"
             - "--api_config=/etc/api_config.json"
